--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,63 @@
-<h1>Welcome On Board</h1>
-<% @items.each do |f| %>
-	<h2><%= link_to f.title, f %></h2>
-	<p><%= f.description %></p>
-<% end %>
+<!-- checks to see if a user is signed in, if one is, it will list its checklist. -->
+<!-- If not, it will render the landing page that asks the user to sign up or login. -->
 
-<%= link_to "New todO", new_item_path %> 
+<% if user_signed_in? %>
+	<div class="col-md-10 col-md-offset-1">
+		<% @items.each do |f| %>
+			<div class="index-wrapper">
+			
+				<% if f.completed? %>
+<!-- For Completed Items -->
+			<div class="row item">
+				<div class="col-md-2">
+					<p><%= link_to complete_item_path(item), method: :patch do %></p>
+					<i class="fa fa-check fa-lg"></i>
+					<% end %>
+					
+				</div>
+
+				<div class="col-md-2">
+					<p><%= link_to f, method: :delete, data: { confirm: "Are You sure?" } do %></p>
+						<i class="fa fa-trash fa-lg"></i>
+						<% end %>	
+				</div>
+
+				<div class="col-md-8">
+					<h2 style="opacity: 0.5;" class="f.title"><stricke><%= link_to f.title, f %></stricke></h2>
+					<p style="opacity: 0.5;" class="item-sub-title item-desc"><%= f.description %></p>
+					<p style="opacity: 0.5;" class="time-created-at item-sub-title">Completed <%= time_ago_in_words(f.completed_at) %> ago </p>
+					
+				</div>
+				
+			</div>
+
+			<% else %>
+			<!-- For Items NOT Completed -->
+			<div class="row item">
+				<div class="col-md-2">
+					<p><%= link_to complete_item_path(item), method: :patch do %></p>
+						<i class="fa fa-check fa-lg"></i>
+						<% end %>	
+				</div>
+
+				<div class="col-md-8">
+					<h2 class="item-title"><%= link_to f.title, f %></h2>
+					<p class="item-sub-title item-desc"><%= f.description %></p>
+					<p style="opacity: 0.5;" class="time-created-at item-sub-title">Created <%= time_ago_in_words(item.created_at) %> Ago</p>
+					
+				</div>
+
+				<div class="col-md-2">
+					<p><%= link_to f, method: :delete, data: { confirm: "Are You Sure?" } do %></p>
+						<i class="fa fa-trash fa-lg"></i>
+						<% end %>
+				</div>
+			</div>
+			<% end %>
+			</div>
+			<% end %>
+			<% else %>
+				<%= render 'welcome_page' %>
+			<% end %>
+	</div>
+
