--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,8 @@
  *= require_self
  */
 
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,700|Merriweather:400,300);
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
