--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,7 +10,7 @@
 <!-- For Completed Items -->
 			<div class="row item">
 				<div class="col-md-2">
-					<p><%= link_to complete_item_path(item), method: :patch do %></p>
+					<p><%= link_to complete_item_path(f), method: :patch do %></p>
 					<i class="fa fa-check fa-lg"></i>
 					<% end %>
 					
@@ -23,7 +23,7 @@
 				</div>
 
 				<div class="col-md-8">
-					<h2 style="opacity: 0.5;" class="f.title"><stricke><%= link_to f.title, f %></stricke></h2>
+					<h2 style="opacity: 0.5;" class="f.title"><strike><%= link_to f.title, f %></strike></h2>
 					<p style="opacity: 0.5;" class="item-sub-title item-desc"><%= f.description %></p>
 					<p style="opacity: 0.5;" class="time-created-at item-sub-title">Completed <%= time_ago_in_words(f.completed_at) %> ago </p>
 					
@@ -35,7 +35,7 @@
 			<!-- For Items NOT Completed -->
 			<div class="row item">
 				<div class="col-md-2">
-					<p><%= link_to complete_item_path(item), method: :patch do %></p>
+					<p><%= link_to complete_item_path(f), method: :patch do %></p>
 						<i class="fa fa-check fa-lg"></i>
 						<% end %>	
 				</div>
@@ -43,7 +43,7 @@
 				<div class="col-md-8">
 					<h2 class="item-title"><%= link_to f.title, f %></h2>
 					<p class="item-sub-title item-desc"><%= f.description %></p>
-					<p style="opacity: 0.5;" class="time-created-at item-sub-title">Created <%= time_ago_in_words(item.created_at) %> Ago</p>
+					<p style="opacity: 0.5;" class="time-created-at item-sub-title">Created <%= time_ago_in_words(f.created_at) %> Ago</p>
 					
 				</div>
 
