--- a/app/views/items/_welcome_page.html.erb
+++ b/app/views/items/_welcome_page.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-	<h2>HipTime! Free and Easy.</h2>
+	<h2>Bangreminder! Simple et gratuit</h2>
 	<br>
-	<h4>Trusted by Millions. Hiptime is the best online Task Management App!</h4>
+	<h4>Des millions de personne nous font confiance. Bangreminder est la meilleure application de gestion des tâches!</h4>
 	<br>
 	<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-danger" %> 
 
