--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HipTime</title>
+    <title>Bangreminder</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -13,7 +13,7 @@
   <nav class="navbar navbar-default">
   	<div class="container">
   		<div class="navbar-header">
-  			<%= link_to "Hiptime", root_path, class: "navbar-brand" %>
+  			<%= link_to "Bangreminder", root_path, class: "navbar-brand" %>
   		</div>
   		<ul class="nav navbar-nav navbar-right">
   			<% if current_user.present? %>
