Modified my model

--- a/app/views/items/_welcome_page.html.erb
+++ b/app/views/items/_welcome_page.html.erb
@@ -3,7 +3,7 @@
 	<br>
 	<h4>Des millions de personne nous font confiance. Bangreminder est la meilleure application de gestion des tâches!</h4>
 	<br>
-	<%= link_to "Sign Up", new_user_registration_path, class: "btn btn-danger" %> 
+	<%= link_to "Inscription", new_user_registration_path, class: "btn btn-danger" %> 
 
 
 </div>
