--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,15 +17,15 @@
   		</div>
   		<ul class="nav navbar-nav navbar-right">
   			<% if current_user.present? %>
-  				<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+  				<li><%= link_to "Deconnexion", destroy_user_session_path, method: :delete %></li>
   			<% else %>
-  				<li><%= link_to "Log In", new_user_session_path %></li>
-  				<li><%= link_to "Sign Up", new_user_registration_path %></li>
+  				<li><%= link_to "Connexion", new_user_session_path %></li>
+  				<li><%= link_to "Inscription", new_user_registration_path %></li>
   			<% end %>
   		</ul>
 
   		<% if user_signed_in? %>
-  			<%= link_to "Create Item", new_item_path, class: "navbar-text navbar-link" %>
+  			<%= link_to "Créer une tâche", new_item_path, class: "navbar-text navbar-link" %>
   		<% end %>
   		
   	</div>
